--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Isaac Dalke</title>
     <style>
         body {
-            background-color: #B0E0E6;
+            background-color: #D4F1F4;
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
             line-height: 1.6;
             color: #24292e;
@@ -24,7 +24,7 @@
         
         img {
             border: 2px solid black;
-            border-radius: 10px;
+            border-radius: 20px;
             max-width: 250px;
             height: auto;
             float: right;
