--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Isaac Dalke</title>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YX670GG9QD"></script> 
+    <script> window.dataLayer = window.dataLayer || []; 
+        function gtag(){dataLayer.push(arguments);} 
+        gtag('js', new Date()); 
+        gtag('config', 'G-YX670GG9QD'); 
+    </script>
     <style>
         body {
             background-color: #D4F1F4;
@@ -24,7 +30,7 @@
         
         img {
             border: 2px solid black;
-            border-radius: 20px;
+            border-radius: 30px;
             max-width: 250px;
             height: auto;
             float: right;
