--- a/index.html
+++ b/index.html
@@ -40,11 +40,13 @@
         a {
             color: #8B0000;
             text-decoration: none;
+            font-weight:350;
         }
         
         a:hover {
-            color: #5C0000
+            color: #5C0000;
             text-decoration: underline;
+            font-weight:400;
         }
         
         p {
