--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </script>
     <style>
         body {
-            background-color: #FFFACD;
+            background-color: #FFFBDC;
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
             line-height: 1.6;
             color: #24292e;
