--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </script>
     <style>
         body {
-            background-color: #FFFBDC;
+            background-color: #F7F3E9;
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
             line-height: 1.6;
             color: #24292e;
@@ -38,13 +38,13 @@
         }
         
         a {
-            color: #8B0000;
+            color: #4A7C59;
             text-decoration: none;
             font-weight:450;
         }
         
         a:hover {
-            color: #5C0000;
+            color: #4A7C59;
             text-decoration: underline;
             font-weight:450;
         }
